[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/Wave_Function_Collapse/Plugin_controll/Main_controll/Plugin_main_controll.gd" type="Script" id=1]
[ext_resource path="res://addons/Wave_Function_Collapse/Plugin_controll/WFC_theme.tres" type="Theme" id=3]
[ext_resource path="res://addons/Wave_Function_Collapse/Plugin_controll/Mesh_preview/Mesh_preview.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/Wave_Function_Collapse/Plugin_controll/DroidSans.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 5 )

[node name="Base" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.667
margin_bottom = -0.200043
rect_min_size = Vector2( 1024, 400 )
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Main_Panel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 400 )
rect_pivot_offset = Vector2( -7, -79 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Control" type="Control" parent="Main_Panel"]
anchor_right = 0.25
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="Main_Panel/Control"]
self_modulate = Color( 0.352941, 0.313726, 0.313726, 0.682353 )
anchor_bottom = 1.0
margin_right = 256.0

[node name="Action_buttons" type="VBoxContainer" parent="Main_Panel/Control/Panel"]
anchor_left = 0.094
anchor_top = 0.06
anchor_right = 0.875
anchor_bottom = 0.29
margin_left = -0.064003
margin_right = -1.52588e-05
margin_bottom = -24.0

[node name="Add" type="Button" parent="Main_Panel/Control/Panel/Action_buttons"]
margin_right = 199.0
margin_bottom = 20.0
text = "Add object"

[node name="Edit" type="Button" parent="Main_Panel/Control/Panel/Action_buttons"]
margin_top = 24.0
margin_right = 199.0
margin_bottom = 44.0
text = "Edit object"

[node name="Duplicate" type="Button" parent="Main_Panel/Control/Panel/Action_buttons"]
margin_top = 48.0
margin_right = 199.0
margin_bottom = 68.0
text = "Duplicate"

[node name="Delete" type="Button" parent="Main_Panel/Control/Panel/Action_buttons"]
margin_top = 72.0
margin_right = 199.0
margin_bottom = 92.0
text = "Delete object"

[node name="Generate" type="Button" parent="Main_Panel/Control/Panel"]
anchor_left = 0.094
anchor_top = 1.0
anchor_right = 0.906
anchor_bottom = 1.0
margin_left = -0.0640011
margin_top = -128.0
margin_right = -7.93602
margin_bottom = -104.0
text = "Generate"

[node name="Clear_map" type="Button" parent="Main_Panel/Control/Panel"]
anchor_left = 0.094
anchor_top = 1.0
anchor_right = 0.875
anchor_bottom = 1.0
margin_left = -0.0640011
margin_top = -96.0
margin_right = -3.05176e-05
margin_bottom = -72.0
text = "Clear map"

[node name="Edit_rules" type="Button" parent="Main_Panel/Control/Panel"]
anchor_left = 0.094
anchor_top = 1.0
anchor_right = 0.871
anchor_bottom = 1.0
margin_left = -0.0640011
margin_top = -64.0
margin_right = 0.0239868
margin_bottom = -40.0
text = "Edit rules"

[node name="view_settings" type="Button" parent="Main_Panel/Control/Panel"]
anchor_left = 0.094
anchor_top = 1.0
anchor_right = 0.875
anchor_bottom = 1.0
margin_left = -0.0640011
margin_top = -32.0
margin_right = -1.52588e-05
margin_bottom = -4.0
text = "Object view settings"

[node name="Objects" type="ScrollContainer" parent="Main_Panel"]
unique_name_in_owner = true
anchor_bottom = 1.0
margin_left = 264.0
margin_top = 8.0
margin_right = 3272.0
margin_bottom = 1144.0
rect_scale = Vector2( 0.25, 0.25 )
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="Main_Panel/Objects"]
unique_name_in_owner = true
columns = 6

[node name="Add_object_panel" type="Panel" parent="Main_Panel"]
unique_name_in_owner = true
visible = false
self_modulate = Color( 0.352941, 0.313726, 0.313726, 0.894118 )
anchor_left = 0.344
anchor_top = 0.08
anchor_right = 0.758
anchor_bottom = 0.64
margin_left = -0.256012
margin_right = -0.192017

[node name="Name_label" type="Label" parent="Main_Panel/Add_object_panel"]
anchor_left = 0.075
anchor_top = 0.071
anchor_right = 0.34
anchor_bottom = 0.179
margin_left = 0.199999
margin_top = 0.0959997
margin_right = -0.160004
margin_bottom = -0.0960007
rect_pivot_offset = Vector2( 160, 96 )
text = "Object name"
align = 1
valign = 1

[node name="name_line_edit" type="LineEdit" parent="Main_Panel/Add_object_panel"]
unique_name_in_owner = true
anchor_left = 0.302
anchor_top = 0.071
anchor_right = 0.943
anchor_bottom = 0.179
margin_left = 15.952
margin_top = 0.0959997
margin_right = 0.167999
margin_bottom = -0.0960007
rect_pivot_offset = Vector2( 24, 96 )

[node name="Mesh_label" type="Label" parent="Main_Panel/Add_object_panel"]
anchor_left = 0.075
anchor_top = 0.357
anchor_right = 0.34
anchor_bottom = 0.464
margin_left = 0.199999
margin_top = 0.0319977
margin_right = -0.160004
margin_bottom = 0.0639954
text = "Object mesh"
align = 1
valign = 1

[node name="Save_button" type="Button" parent="Main_Panel/Add_object_panel"]
anchor_left = 0.679
anchor_top = 0.75
anchor_right = 0.943
anchor_bottom = 0.893
margin_left = 0.104004
margin_top = 1.52588e-05
margin_right = 0.167999
margin_bottom = 2.96802
text = "Save"

[node name="Cancel_button" type="Button" parent="Main_Panel/Add_object_panel"]
anchor_left = 0.075
anchor_top = 0.75
anchor_right = 0.34
anchor_bottom = 0.893
margin_left = 0.199999
margin_top = -1.52588e-05
margin_right = -0.160004
margin_bottom = 2.96799
text = "Cancel"

[node name="Folder_select" type="FileDialog" parent="Main_Panel/Add_object_panel"]
unique_name_in_owner = true
anchor_top = -0.231
anchor_right = 1.0
anchor_bottom = 1.385
margin_left = 2.0
margin_top = 18.808
margin_right = -6.0
margin_bottom = -112.392
popup_exclusive = true
window_title = "Open a Directory"
dialog_hide_on_ok = true
mode = 2

[node name="Mesh_select" type="FileDialog" parent="Main_Panel/Add_object_panel"]
unique_name_in_owner = true
anchor_top = -0.231
anchor_right = 1.0
anchor_bottom = 1.385
margin_left = -112.0
margin_top = -228.256
margin_right = -120.0
margin_bottom = -359.456
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.mesh ; Mesh file" )

[node name="Label" type="Label" parent="Main_Panel/Add_object_panel"]
visible = false
anchor_left = 0.057
anchor_top = 0.429
anchor_right = 0.321
anchor_bottom = 0.536
margin_left = -0.168001
margin_top = -0.0960083
margin_right = -0.104004
margin_bottom = -0.064003
text = "Resource path"
align = 1
valign = 1

[node name="Mesh_path_button" type="Button" parent="Main_Panel/Add_object_panel"]
unique_name_in_owner = true
anchor_left = 0.302
anchor_top = 0.357
anchor_right = 0.943
anchor_bottom = 0.446
margin_left = 15.952
margin_top = 0.0319977
margin_right = 0.167999
margin_bottom = 0.0960007
text = "[empty]"
clip_text = true

[node name="Resource_path_button" type="Button" parent="Main_Panel/Add_object_panel"]
unique_name_in_owner = true
visible = false
anchor_left = 0.377
anchor_top = 0.429
anchor_right = 0.925
anchor_bottom = 0.518
margin_left = 0.151993
margin_top = -0.0960083
margin_right = -0.200043
margin_bottom = -0.0319977
text = "[empty]"

[node name="Err" type="Label" parent="Main_Panel/Add_object_panel"]
unique_name_in_owner = true
visible = false
anchor_left = 0.075
anchor_top = 0.536
anchor_right = 0.302
anchor_bottom = 0.607
margin_left = 0.199999
margin_top = -0.064003
margin_right = -0.0480042
margin_bottom = 0.0319824
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Fill name field"
align = 1
valign = 1

[node name="preview" type="Panel" parent="Main_Panel/Add_object_panel"]
unique_name_in_owner = true
visible = false
self_modulate = Color( 0.352941, 0.313726, 0.313726, 0.894118 )
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 224.0

[node name="preview_control" parent="Main_Panel/Add_object_panel/preview" instance=ExtResource( 4 )]
unique_name_in_owner = true
anchor_left = -0.036
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.064
margin_top = 16.0
margin_right = 284.0
margin_bottom = 292.0
rect_scale = Vector2( 0.4, 0.4 )

[node name="Delete_panel" type="Panel" parent="Main_Panel"]
unique_name_in_owner = true
visible = false
self_modulate = Color( 0.352941, 0.313726, 0.313726, 1 )
anchor_left = 0.344
anchor_right = 0.758
margin_left = -0.256012
margin_top = 32.0
margin_right = -0.192017
margin_bottom = 256.0

[node name="Warning" type="Label" parent="Main_Panel/Delete_panel"]
unique_name_in_owner = true
anchor_left = 0.075
anchor_right = 0.925
margin_left = 0.199999
margin_top = 32.0
margin_right = -0.200043
margin_bottom = 104.0
text = "Are you sure you want to delete object
 %placeholder%
MEWEMEW"
align = 1
valign = 1

[node name="Yes" type="Button" parent="Main_Panel/Delete_panel"]
anchor_left = 0.66
anchor_right = 0.925
margin_left = 0.160004
margin_top = 160.0
margin_right = -0.200043
margin_bottom = 192.0
text = "yes"

[node name="No" type="Button" parent="Main_Panel/Delete_panel"]
anchor_left = 0.075
anchor_right = 0.34
margin_left = 0.199999
margin_top = 160.0
margin_right = -0.160004
margin_bottom = 192.0
text = "no"

[node name="Duplicate_object" type="Panel" parent="Main_Panel"]
unique_name_in_owner = true
visible = false
self_modulate = Color( 0.352941, 0.313726, 0.313726, 0.894118 )
anchor_left = 0.344
anchor_top = 0.08
anchor_right = 0.758
anchor_bottom = 0.64
margin_left = -0.256012
margin_right = -0.192017

[node name="duplicate_label" type="Label" parent="Main_Panel/Duplicate_object"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_right = -120.0
margin_bottom = -192.0
text = "Duplicate object NAME"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Main_Panel/Duplicate_object"]
anchor_left = 0.075
anchor_right = 0.377
margin_left = 0.199999
margin_top = 40.0
margin_right = 0.151993
margin_bottom = 136.0

[node name="Rotate_90" type="CheckBox" parent="Main_Panel/Duplicate_object/VBoxContainer"]
unique_name_in_owner = true
margin_right = 128.0
margin_bottom = 24.0
text = "Rotate 90°"

[node name="Rotate_180" type="CheckBox" parent="Main_Panel/Duplicate_object/VBoxContainer"]
unique_name_in_owner = true
margin_top = 28.0
margin_right = 128.0
margin_bottom = 52.0
text = "Rotate 180°"

[node name="Rotate_270" type="CheckBox" parent="Main_Panel/Duplicate_object/VBoxContainer"]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 128.0
margin_bottom = 80.0
text = "Rotate 270°"

[node name="Keep rules" type="CheckBox" parent="Main_Panel/Duplicate_object/VBoxContainer"]
unique_name_in_owner = true
margin_top = 84.0
margin_right = 128.0
margin_bottom = 108.0
pressed = true
text = "Keep rules"

[node name="cancel_duplicate_button" type="Button" parent="Main_Panel/Duplicate_object"]
margin_left = 32.0
margin_top = 168.0
margin_right = 144.0
margin_bottom = 203.0
text = "Cancel"

[node name="duplicate_button" type="Button" parent="Main_Panel/Duplicate_object"]
margin_left = 280.0
margin_top = 168.0
margin_right = 392.0
margin_bottom = 203.0
text = "Duplicate"

[node name="Camera_settings" type="Panel" parent="Main_Panel"]
unique_name_in_owner = true
visible = false
self_modulate = Color( 0.352941, 0.313726, 0.313726, 0.894118 )
anchor_left = 0.344
anchor_top = 0.08
anchor_right = 0.758
anchor_bottom = 0.64
margin_left = -0.256012
margin_right = -0.192017

[node name="cam_label" type="Label" parent="Main_Panel/Camera_settings"]
anchor_left = 0.226
anchor_right = 0.83
margin_left = 0.175995
margin_right = 0.0799866
margin_bottom = 32.0
text = "Object preview settings"
align = 1
valign = 1

[node name="fov_spin" type="SpinBox" parent="Main_Panel/Camera_settings"]
unique_name_in_owner = true
anchor_top = 0.214
anchor_bottom = 0.321
margin_left = 128.0
margin_top = 0.0639954
margin_right = 320.0
margin_bottom = 0.0960007
min_value = 1.0
max_value = 179.0
value = 40.0
rounded = true

[node name="Fov" type="Label" parent="Main_Panel/Camera_settings"]
anchor_top = 0.214
anchor_bottom = 0.321
margin_left = 8.0
margin_top = 0.0639954
margin_right = 64.0
margin_bottom = 0.0960007
text = "FOV"
align = 1
valign = 1

[node name="Height_spin" type="SpinBox" parent="Main_Panel/Camera_settings"]
unique_name_in_owner = true
anchor_top = 0.214
anchor_bottom = 0.321
margin_left = 128.0
margin_top = 40.064
margin_right = 320.0
margin_bottom = 40.096
min_value = 1.0
value = 2.0
rounded = true

[node name="Height2" type="Label" parent="Main_Panel/Camera_settings"]
anchor_top = 0.214
anchor_bottom = 0.321
margin_left = 8.0
margin_top = 40.064
margin_right = 64.0
margin_bottom = 40.096
text = "Height"
align = 1
valign = 1

[node name="angle_spin" type="SpinBox" parent="Main_Panel/Camera_settings"]
unique_name_in_owner = true
anchor_top = 0.214
anchor_bottom = 0.321
margin_left = 128.0
margin_top = 120.064
margin_right = 320.0
margin_bottom = 120.096
min_value = -45.0
max_value = 0.0
step = -1.0
value = -21.0
rounded = true

[node name="Angle" type="Label" parent="Main_Panel/Camera_settings"]
anchor_top = 0.214
anchor_bottom = 0.321
margin_left = 8.0
margin_top = 120.064
margin_right = 64.0
margin_bottom = 120.096
text = "Angle"
align = 1
valign = 1

[node name="Dist_spin" type="SpinBox" parent="Main_Panel/Camera_settings"]
unique_name_in_owner = true
anchor_top = 0.214
anchor_bottom = 0.321
margin_left = 128.0
margin_top = 80.064
margin_right = 320.0
margin_bottom = 80.096
min_value = 1.0
value = 1.0
rounded = true

[node name="dist" type="Label" parent="Main_Panel/Camera_settings"]
anchor_top = 0.214
anchor_bottom = 0.321
margin_left = 8.0
margin_top = 80.064
margin_right = 64.0
margin_bottom = 80.096
text = "Dist"
align = 1
valign = 1

[node name="Button" type="Button" parent="Main_Panel/Camera_settings"]
anchor_top = 0.857
anchor_bottom = 0.929
margin_left = 344.0
margin_top = 0.0319824
margin_right = 408.0
margin_bottom = 3.90399
text = "Back"

[node name="Edit_panel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
self_modulate = Color( 0.231373, 0.278431, 0.470588, 0.74902 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Edit_sceene" type="Panel" parent="Edit_panel"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Mesh_preview" parent="Edit_panel/Edit_sceene" instance=ExtResource( 4 )]
unique_name_in_owner = true
anchor_left = 0.265625
anchor_top = 0.02
anchor_right = 0.633125
anchor_bottom = 0.96
margin_right = 123.68
margin_bottom = 124.0
rect_scale = Vector2( 0.75, 0.75 )
__meta__ = {
"_edit_use_anchors_": true
}
clicable = false

[node name="Preview_container" type="ScrollContainer" parent="Edit_panel/Edit_sceene"]
anchor_left = 0.648
anchor_top = 1.0
anchor_right = 0.937
anchor_bottom = 1.0
margin_left = 0.447998
margin_top = -112.0
margin_right = 2664.51
margin_bottom = 1008.0
rect_scale = Vector2( 0.1, 0.1 )

[node name="adj_obj_container" type="GridContainer" parent="Edit_panel/Edit_sceene/Preview_container"]
unique_name_in_owner = true
columns = 6

[node name="Label" type="Label" parent="Edit_panel/Edit_sceene"]
anchor_left = 0.648
anchor_top = 1.0
anchor_right = 0.937
anchor_bottom = 1.0
margin_left = 0.447998
margin_top = -144.0
margin_right = 0.511963
margin_bottom = -112.0
text = "Connecting tiles"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Add_rule_button" type="Button" parent="Edit_panel/Edit_sceene"]
anchor_left = 0.648
anchor_top = 1.0
anchor_right = 0.742
anchor_bottom = 1.0
margin_left = 0.447998
margin_top = -184.0
margin_right = 0.255981
margin_bottom = -164.0
text = "Add rule"

[node name="Label2" type="Label" parent="Edit_panel/Edit_sceene"]
anchor_left = 0.656
anchor_right = 0.945
margin_left = 0.255981
margin_top = 16.0
margin_right = 0.319946
margin_bottom = 40.0
text = "Rules"
align = 1
valign = 1

[node name="ScrollContainer2" type="ScrollContainer" parent="Edit_panel/Edit_sceene"]
anchor_left = 0.648
anchor_right = 0.953
anchor_bottom = 0.52
margin_left = 0.447998
margin_top = 56.0
margin_right = 0.12793
margin_bottom = -1.52588e-05
scroll_horizontal_enabled = false

[node name="Rule_container" type="GridContainer" parent="Edit_panel/Edit_sceene/ScrollContainer2"]
unique_name_in_owner = true

[node name="update_adj" type="Button" parent="Edit_panel/Edit_sceene"]
anchor_left = 0.937
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.511963
margin_top = -32.0
margin_right = -8.0
margin_bottom = -8.0
text = "update"

[node name="Control" type="Control" parent="Edit_panel"]
anchor_bottom = 1.0
margin_right = 256.0

[node name="Panel" type="Panel" parent="Edit_panel/Control"]
self_modulate = Color( 0.352941, 0.313726, 0.313726, 0.682353 )
anchor_bottom = 1.0
margin_right = 256.0

[node name="Back" type="Button" parent="Edit_panel/Control/Panel"]
anchor_left = 0.0955938
anchor_top = 1.0
anchor_right = 0.914
anchor_bottom = 1.0
margin_left = -1.472
margin_top = -32.0
margin_right = 0.0159912
margin_bottom = -8.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Edit_panel/Control/Panel"]
anchor_left = 0.094
anchor_top = 0.14
anchor_right = 0.906
anchor_bottom = 0.68
margin_left = -0.0640011
margin_top = 8.0
margin_right = 0.0639954
margin_bottom = -64.0

[node name="Front_v" type="Button" parent="Edit_panel/Control/Panel/VBoxContainer"]
unique_name_in_owner = true
margin_right = 208.0
margin_bottom = 20.0
text = "Front"

[node name="Back_v" type="Button" parent="Edit_panel/Control/Panel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 24.0
margin_right = 208.0
margin_bottom = 44.0
text = "Back"

[node name="Right_v" type="Button" parent="Edit_panel/Control/Panel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 48.0
margin_right = 208.0
margin_bottom = 68.0
text = "Right"

[node name="Left_v" type="Button" parent="Edit_panel/Control/Panel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 72.0
margin_right = 208.0
margin_bottom = 92.0
text = "Left"

[node name="Up_v" type="Button" parent="Edit_panel/Control/Panel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 96.0
margin_right = 208.0
margin_bottom = 116.0
text = "Up"

[node name="Down_v" type="Button" parent="Edit_panel/Control/Panel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 120.0
margin_right = 208.0
margin_bottom = 140.0
text = "Down"

[node name="Current_selected" type="Label" parent="Edit_panel/Control/Panel"]
unique_name_in_owner = true
margin_left = 24.0
margin_top = 16.0
margin_right = 232.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "FRONT"
align = 1
valign = 1

[node name="copy" type="Button" parent="Edit_panel/Control/Panel"]
anchor_left = 0.094
anchor_top = 1.0
anchor_right = 0.906
anchor_bottom = 1.0
margin_left = -0.0640011
margin_top = -72.0
margin_right = 0.0639954
margin_bottom = -48.0
text = "Add rule to all sides"

[node name="Rule_ to_all_sides" type="Panel" parent="Edit_panel/Control"]
unique_name_in_owner = true
visible = false
self_modulate = Color( 0.105882, 0.105882, 0.105882, 1 )
anchor_left = 0.094
anchor_top = 1.0
anchor_right = 0.906
anchor_bottom = 1.0
margin_left = -0.0640011
margin_top = -144.0
margin_right = 0.0639954
margin_bottom = -40.0

[node name="rul_to_all_color" type="ColorRect" parent="Edit_panel/Control/Rule_ to_all_sides"]
unique_name_in_owner = true
anchor_left = 0.038
anchor_top = 0.067
anchor_right = 0.115
anchor_bottom = 0.067
margin_left = 0.0959997
margin_top = 1.03201
margin_right = 0.0799999
margin_bottom = 25.032

[node name="add_rul_to_all" type="Button" parent="Edit_panel/Control/Rule_ to_all_sides"]
unique_name_in_owner = true
anchor_left = 0.038
anchor_top = 0.937
anchor_right = 0.962
anchor_bottom = 0.937
margin_left = 0.0959997
margin_top = -57.448
margin_right = -0.0960083
margin_bottom = -33.448
text = "Add rule"

[node name="cancel_rul_to_all" type="Button" parent="Edit_panel/Control/Rule_ to_all_sides"]
unique_name_in_owner = true
anchor_left = 0.038
anchor_top = 0.937
anchor_right = 0.962
anchor_bottom = 0.937
margin_left = 0.0959997
margin_top = -25.448
margin_right = -0.0960083
margin_bottom = -1.44801
text = "Cancel"

[node name="rul_to_all_options" type="OptionButton" parent="Edit_panel/Control/Rule_ to_all_sides"]
unique_name_in_owner = true
anchor_left = 0.154
anchor_top = 0.067
anchor_right = 0.962
anchor_bottom = 0.067
margin_left = -0.0320015
margin_top = 1.03201
margin_right = -0.0960083
margin_bottom = 25.032

[node name="Edit_rule_panel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 400 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="Edit_rule_panel"]
self_modulate = Color( 0.352941, 0.313726, 0.313726, 0.682353 )
anchor_bottom = 1.0
margin_right = 256.0

[node name="Back_rul_edit" type="Button" parent="Edit_rule_panel/Panel"]
anchor_left = 0.088
anchor_top = 0.06
anchor_right = 0.912
anchor_bottom = 0.06
margin_left = 0.0639973
margin_top = 344.0
margin_right = -0.0640106
margin_bottom = 364.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Edit_rule_panel/Panel"]
margin_left = 24.0
margin_top = 16.0
margin_right = 232.0
margin_bottom = 336.0

[node name="ScrollContainer" type="ScrollContainer" parent="Edit_rule_panel"]
anchor_left = 0.266
anchor_top = 0.04
anchor_right = 0.984
anchor_bottom = 0.04
margin_left = -0.384003
margin_right = 0.383972
margin_bottom = 336.0

[node name="Base_rule_list" type="GridContainer" parent="Edit_rule_panel/ScrollContainer"]
unique_name_in_owner = true

[node name="Add_rule_to_rules" type="Button" parent="Edit_rule_panel"]
anchor_left = 0.273
anchor_top = 0.02
anchor_right = 0.367
anchor_bottom = 0.02
margin_left = 0.447998
margin_top = 344.0
margin_right = 32.192
margin_bottom = 376.0
text = "Add base rules"

[node name="no_selected_panel" type="Panel" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="no_selected_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Wave function collapse node 
missing WFC_object_list resource
"
align = 1
valign = 1

[connection signal="cam_settings_changed" from="." to="Main_Panel/Add_object_panel/preview/preview_control" method="cam_settings_changed"]
[connection signal="cam_settings_changed" from="." to="Edit_panel/Edit_sceene/Mesh_preview" method="cam_settings_changed"]
[connection signal="pressed" from="Main_Panel/Control/Panel/Action_buttons/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="Main_Panel/Control/Panel/Action_buttons/Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="Main_Panel/Control/Panel/Action_buttons/Duplicate" to="." method="_on_Duplicate_pressed"]
[connection signal="pressed" from="Main_Panel/Control/Panel/Action_buttons/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="Main_Panel/Control/Panel/Generate" to="." method="_on_Generate_pressed"]
[connection signal="pressed" from="Main_Panel/Control/Panel/Clear_map" to="." method="_on_Clear_map_pressed"]
[connection signal="pressed" from="Main_Panel/Control/Panel/Edit_rules" to="." method="_on_Edit_rules_pressed"]
[connection signal="pressed" from="Main_Panel/Control/Panel/view_settings" to="." method="_on_view_settings_pressed"]
[connection signal="pressed" from="Main_Panel/Add_object_panel/Save_button" to="." method="_on_Add_Save_button_pressed"]
[connection signal="pressed" from="Main_Panel/Add_object_panel/Cancel_button" to="." method="_on_Add_Cancel_button_pressed"]
[connection signal="dir_selected" from="Main_Panel/Add_object_panel/Folder_select" to="." method="_on_Folder_select_dir_selected"]
[connection signal="file_selected" from="Main_Panel/Add_object_panel/Mesh_select" to="." method="_on_Mesh_select_file_selected"]
[connection signal="pressed" from="Main_Panel/Add_object_panel/Mesh_path_button" to="." method="_on_Mesh_path_button_pressed"]
[connection signal="pressed" from="Main_Panel/Add_object_panel/Resource_path_button" to="." method="_on_Resource_path_button_pressed"]
[connection signal="pressed" from="Main_Panel/Delete_panel/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="Main_Panel/Delete_panel/No" to="." method="_on_No_pressed"]
[connection signal="pressed" from="Main_Panel/Duplicate_object/cancel_duplicate_button" to="." method="_on_cancel_duplicate_button_pressed"]
[connection signal="pressed" from="Main_Panel/Duplicate_object/duplicate_button" to="." method="_on_duplicate_button_pressed"]
[connection signal="value_changed" from="Main_Panel/Camera_settings/fov_spin" to="." method="_on_fov_spin_value_changed"]
[connection signal="value_changed" from="Main_Panel/Camera_settings/Height_spin" to="." method="_on_Height_spin_value_changed"]
[connection signal="value_changed" from="Main_Panel/Camera_settings/angle_spin" to="." method="_on_angle_spin_value_changed"]
[connection signal="value_changed" from="Main_Panel/Camera_settings/Dist_spin" to="." method="_on_Dist_spin_value_changed"]
[connection signal="pressed" from="Main_Panel/Camera_settings/Button" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Edit_panel/Edit_sceene/Add_rule_button" to="." method="_on_Add_rule_button_pressed"]
[connection signal="pressed" from="Edit_panel/Edit_sceene/update_adj" to="." method="_on_update_adj_pressed"]
[connection signal="pressed" from="Edit_panel/Control/Panel/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Edit_panel/Control/Panel/VBoxContainer/Front_v" to="." method="_on_Front_pressed"]
[connection signal="pressed" from="Edit_panel/Control/Panel/VBoxContainer/Back_v" to="." method="_on_Back_side_pressed"]
[connection signal="pressed" from="Edit_panel/Control/Panel/VBoxContainer/Right_v" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Edit_panel/Control/Panel/VBoxContainer/Left_v" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Edit_panel/Control/Panel/VBoxContainer/Up_v" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="Edit_panel/Control/Panel/VBoxContainer/Down_v" to="." method="_on_Down_pressed"]
[connection signal="pressed" from="Edit_panel/Control/Panel/copy" to="." method="_on_copy_pressed"]
[connection signal="pressed" from="Edit_panel/Control/Rule_ to_all_sides/add_rul_to_all" to="." method="_on_add_rul_to_all_pressed"]
[connection signal="pressed" from="Edit_panel/Control/Rule_ to_all_sides/cancel_rul_to_all" to="." method="_on_cancel_rul_to_all_pressed"]
[connection signal="item_selected" from="Edit_panel/Control/Rule_ to_all_sides/rul_to_all_options" to="." method="_on_rul_to_all_options_item_selected"]
[connection signal="pressed" from="Edit_rule_panel/Panel/Back_rul_edit" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Edit_rule_panel/Panel/Back_rul_edit" to="." method="_on_Back_rul_edit_pressed"]
[connection signal="pressed" from="Edit_rule_panel/Add_rule_to_rules" to="." method="_on_Add_rule_to_rules_pressed"]
